another attempt to fix the weird left align issue... only occurs when I ship to prod

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+.page-body {
   max-width: 45em;
   margin: 0 auto;
   padding: 2em;
